se añade la carpeta Documentos, y se limpia un poco el codigo

--- a/WWW-error/404.html
+++ b/WWW-error/404.html
@@ -4,7 +4,7 @@
 	<title>404 Error</title>
 </head>
 	<body>
-		<h1>404 ERROR NO FOUND FILE</h1>
-		<p>salu2</p>
+		<h1>404 ERROR</h1>
+		<p>404 ERROR NO FOUND FILE.</p>
 	</body>
 </html>
