se ajustan los ultimos detalles para cumplir con el formato solicitado

--- a/WWW-error/404.html
+++ b/WWW-error/404.html
@@ -4,7 +4,10 @@
 	<title>404 Error</title>
 </head>
 	<body>
-		<h1>404 ERROR</h1>
-		<p>404 ERROR NO FOUND FILE.</p>
+		<center>
+			<h1>404 ERROR</h1>
+			<p>404 ERROR NO FOUND FILE.</p>	
+		</center>
+		
 	</body>
 </html>
